--- a/index.html
+++ b/index.html
@@ -676,9 +676,10 @@
             <p>&copy; 2025 Jiangyu Zeng. All rights reserved.</p>
             <div class="social-links">
                 <a href="mailto:jiangyu1@ualberta.ca">Email</a>
-                <a href="#">Google Scholar</a>
-                <a href="#">ResearchGate</a>
-                <a href="#">LinkedIn</a>
+                    <a href="#">Google Scholar</a>
+                    <a href="#">ResearchGate</a>
+                    <a href="https://www.linkedin.com/in/jiangyu-zeng-0a4a76204/"
+                       target="_blank" rel="noopener">LinkedIn</a>
             </div>
         </div>
     </footer>
