--- a/index.html
+++ b/index.html
@@ -539,20 +539,21 @@
                     <h3 data-en="Ph.D. in Civil Engineering" data-zh="土木工程博士">Ph.D. in Civil Engineering</h3>
                     <div class="institution" data-en="University of Alberta" data-zh="阿尔伯塔大学">University of Alberta</div>
                     <div class="date" data-en="January 2022 – April 2026 (Expected)" data-zh="2022年1月 – 2026年4月（预期）">January 2022 – April 2026 (Expected)</div>
-                    <div class="gpa">CGPA: 3.85/4.00</div>
+                    <div class="gpa">CGPA: 4.00</div>
                     <p><strong data-en="Candidacy Exam Completed:" data-zh="博士候选人资格考试已通过：">Candidacy Exam Completed:</strong> "A Crowdsensing-Enabled Population-Based Structural Health Monitoring (CE-PBSHM) Framework Using Drive-by Measurements"</p>
                 </div>
                 <div class="education-item">
                     <h3 data-en="M.Sc. in Civil Engineering" data-zh="土木工程硕士">M.Sc. in Civil Engineering</h3>
                     <div class="institution" data-en="University of Alberta" data-zh="阿尔伯塔大学">University of Alberta</div>
                     <div class="date" data-en="January 2020 – December 2022" data-zh="2020年1月 – 2022年12月">January 2020 – December 2022</div>
+                    <div class="gpa">CGPA: 3.80</div>
                     <p data-en="Focus on imaging-based analysis and computer vision applications in civil engineering" data-zh="专注于土木工程中基于图像的分析和计算机视觉应用">Focus on imaging-based analysis and computer vision applications in civil engineering</p>
                 </div>
                 <div class="education-item">
                     <h3 data-en="B.Sc. in Civil Engineering" data-zh="土木工程学士">B.Sc. in Civil Engineering</h3>
                     <div class="institution" data-en="University of Manitoba" data-zh="曼尼托巴大学">University of Manitoba</div>
                     <div class="date" data-en="September 2015 – June 2019" data-zh="2015年9月 – 2019年6月">September 2015 – June 2019</div>
-                    <div class="gpa">CGPA: 3.70/4.50</div>
+                    <div class="gpa">CGPA: 3.70</div>
                     <p data-en="Developed foundational knowledge in civil engineering with early exposure to research through undergraduate research assistantship" data-zh="通过本科研究助理工作，建立了土木工程基础知识并早期接触科研">Developed foundational knowledge in civil engineering with early exposure to research through undergraduate research assistantship</p>
                 </div>
             </section>
