--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                 <div class="publication-item">
                     <h4>Multi-Bridge Inference Structural Health Monitoring (MISHM): A Drive-By Crowdsensing Approach at the Network Level</h4>
                     <div class="authors">J. Zeng, Q. Mei, and M. Gül</div>
-                    <div class="venue">Submitted to Structural Health Monitoring, 2025</div>
+                    <div class="venue">Accepted by Structural Health Monitoring, 2025</div>
                     <p data-en="This paper presents a novel framework for monitoring multiple bridges simultaneously using crowdsensing technologies and drive-by measurements." data-zh="本文提出了一种利用群体感知技术和过车测量同时监测多座桥梁的新框架。">This paper presents a novel framework for monitoring multiple bridges simultaneously using crowdsensing technologies and drive-by measurements.</p>
                 </div>
                 <div class="publication-item">
