Revert "practice tweak"
This reverts commit b8e916061e8cea6920ba7262ce23527d03b74489.

B

--- a/index.html
+++ b/index.html
@@ -821,10 +821,10 @@
             const icon = darkModeToggle.querySelector('.icon');
             if (isDarkMode) {
                 icon.textContent = '☀️';
-                darkModeText.textContent = currentLanguage === 'zh' ? '浅色' : 'Light Mode';
+                darkModeText.textContent = currentLanguage === 'zh' ? '浅色模式' : 'Light Mode';
             } else {
                 icon.textContent = '🌙';
-                darkModeText.textContent = currentLanguage === 'zh' ? '深色' : 'Dark Mode';
+                darkModeText.textContent = currentLanguage === 'zh' ? '深色模式' : 'Dark Mode';
             }
         }
 
